New plugin: maps
Saves maps stats (players/servers private or not) but without historical
data (so no .rrd file to init)

--- a/data/conf.ini
+++ b/data/conf.ini
@@ -30,6 +30,7 @@ workers         = 5
 plugins[]       = players
 plugins[]       = servers
 plugins[]       = gametypes
+plugins[]       = maps
 
 [mysql]
 address         = localhost
