--- a/data/conf.ini
+++ b/data/conf.ini
@@ -31,6 +31,7 @@ plugins[]       = players
 plugins[]       = servers
 plugins[]       = gametypes
 plugins[]       = maps
+plugins[]       = versions
 
 [mysql]
 address         = localhost
