New plugin : Ping
closes #2

--- a/data/conf.ini
+++ b/data/conf.ini
@@ -32,6 +32,7 @@ plugins[]       = servers
 plugins[]       = gametypes
 plugins[]       = maps
 plugins[]       = versions
+plugins[]       = ping
 
 [mysql]
 address         = localhost
