--- a/data/conf.ini
+++ b/data/conf.ini
@@ -24,6 +24,8 @@
 ;    Contains parameters like master servers address, mysql credentials, etc
 ;
 
+latest42version         = 4.2.012
+
 [master]
 rrdFile         = masters.rrd
 master1         = master.urbanterror.info
