Adding matches plugin by default now :D

--- a/data/conf.ini
+++ b/data/conf.ini
@@ -36,10 +36,11 @@ workers                     = 5
 keepHistoricalDataForMaps   = false         ; Be carefull, may generale a lot of .rrd files!
 plugins[]                   = players
 plugins[]                   = servers
+plugins[]                   = matches
 plugins[]                   = gametypes
-plugins[]                   = maps
 plugins[]                   = versions
 plugins[]                   = ping
+plugins[]                   = maps
 
 [mysql]
 address                     = localhost
