--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Testing crap
-test
-
 # Windows image file caches
 Thumbs.db
 
@@ -9,3 +6,12 @@ Desktop.ini
 
 # Mac crap
 .DS_Store
+
+# Collected data
+/data/*.extrema
+/data/*.last
+/data/*.rrd
+/data/*.json
+
+# Workers data
+/crons/slots/*/*
