Add the ability to choose master server port + adding an additional master server. Will be usefull to continue tracking of 4.1 server after FS master shutdown for 4.1

--- a/conf.ini
+++ b/conf.ini
@@ -28,12 +28,13 @@ latest42version         = 4.2.017
 
 [master]
 rrdFile                     = masters.rrd
-master1                     = master.urbanterror.info
-master2                     = master2.urbanterror.info
+master1                     = master.urbanterror.info:27900
+master2                     = master.urbanterror.info:27950
+additionalMaster            = master.quake3arena.com:27950     ; For finding UrT servers on an other master, set to false to desactivate it :)
 
 [collector]
 workers                     = 5
-keepHistoricalDataForMaps   = false         ; Be carefull, may generale a lot of .rrd files!
+keepHistoricalDataForMaps   = false                             ; Be carefull, may generale a lot of .rrd files!
 plugins[]                   = players
 plugins[]                   = servers
 plugins[]                   = matches
